[gd_scene load_steps=12 format=3 uid="uid://cwd1jm6cd2ow0"]

[ext_resource type="Script" path="res://scenes/start.gd" id="1_6y68d"]
[ext_resource type="AudioStream" uid="uid://b5hp4hy1v6aj1" path="res://asset/buttonEffect.mp3" id="3_c6dvh"]
[ext_resource type="Texture2D" uid="uid://bpmvh3h5qaqh2" path="res://asset/Blocks.png" id="4_3ethx"]
[ext_resource type="VideoStream" path="res://asset/loopbg.ogv" id="4_ua1cn"]
[ext_resource type="Texture2D" uid="uid://c8nxk8t8nskfo" path="res://asset/Retro.png" id="5_4hiuq"]

[sub_resource type="Animation" id="Animation_jdp16"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartFadeIn:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_c6dvh")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cdbx7"]
_data = {
"RESET": SubResource("Animation_jdp16")
}

[sub_resource type="Animation" id="Animation_0irix"]
length = 0.89
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.22,
"stream": ExtResource("3_c6dvh")
}],
"times": PackedFloat32Array(0.0666667)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_c6dvh")]
}

[sub_resource type="Animation" id="Animation_grcb7"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartFadeIn:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_mfyra"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartFadeIn:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ms8ys"]
_data = {
"ButtonEffect": SubResource("Animation_0irix"),
"FadeIn": SubResource("Animation_grcb7"),
"FadeOut": SubResource("Animation_mfyra")
}

[node name="Start" type="Node2D"]
script = ExtResource("1_6y68d")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_left = -3.0
offset_right = 1167.0
offset_bottom = 2532.0
stream = ExtResource("4_ua1cn")
autoplay = true
expand = true
loop = true

[node name="GameStart" type="Button" parent="."]
offset_left = 330.0
offset_top = 1712.0
offset_right = 810.0
offset_bottom = 1912.0
theme_override_font_sizes/font_size = 80
text = "GameStart"

[node name="Options" type="Button" parent="."]
offset_left = 325.0
offset_top = 2008.0
offset_right = 805.0
offset_bottom = 2208.0
theme_override_font_sizes/font_size = 80
text = "Options"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_c6dvh")
volume_db = 3.377

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cdbx7"),
"Start": SubResource("AnimationLibrary_ms8ys")
}

[node name="StartFadeIn" type="ColorRect" parent="."]
offset_right = 1170.0
offset_bottom = 2532.0
scale = Vector2(0.995701, 1.00393)
color = Color(0, 0, 0, 0)

[node name="Blocks" type="Sprite2D" parent="."]
position = Vector2(605.202, 957.713)
scale = Vector2(2.28003, 1.82325)
texture = ExtResource("4_3ethx")

[node name="Retro" type="Sprite2D" parent="."]
position = Vector2(334.202, 823.713)
scale = Vector2(1.77254, 1.77254)
texture = ExtResource("5_4hiuq")

[connection signal="pressed" from="GameStart" to="." method="_on_game_start_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
